Fix YouTube embed error 153 - add referrer policy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Orange County VA - Protect Our Rural Community</title>
     <meta name="description" content="Protecting Orange County, Virginia's rural character from data center development. Stay informed and get involved.">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <link rel="preload" href="hero-virginia.jpg" as="image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1941,10 +1942,11 @@
                     <div class="threat-card-body">
                         <div class="video-wrapper">
                             <iframe 
-                                src="https://www.youtube.com/embed/ZFPoOzQrPIc" 
-                                title="Exposing The Dark Side of America's AI Data Center Explosion"
+                                src="https://www.youtube-nocookie.com/embed/t-8TDOFqkQA" 
+                                title="YouTube video player"
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                referrerpolicy="strict-origin-when-cross-origin"
                                 allowfullscreen
                                 loading="lazy">
                             </iframe>
