Add Open Graph meta tags for Facebook sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Save Orange County VA - Protect Our Rural Community</title>
     <meta name="description" content="Protecting Orange County, Virginia's rural character from data center development. Stay informed and get involved.">
     <meta name="referrer" content="strict-origin-when-cross-origin">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://saveorangecountyva.com">
+    <meta property="og:title" content="Save Orange County VA - Protect Our Rural Community">
+    <meta property="og:description" content="Protecting Orange County, Virginia's rural character from data center development. Stay informed and get involved.">
+    <meta property="og:image" content="https://saveorangecountyva.com/hero-virginia.jpg">
     <link rel="preload" href="hero-virginia.jpg" as="image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
