Fix mobile alignment for map markers

--- a/index.html
+++ b/index.html
@@ -1383,9 +1383,7 @@
                 grid-template-columns: 1fr;
             }
 
-            .county-map-wrapper {
-                height: 280px;
-            }
+            /* Map wrapper naturally sizes to image - no fixed height needed */
         }
 
         /* Skip link */
