Add Feb 3 Town IDA and Feb 10 BOS meetings, remove old victory/decision cards

--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,21 @@
             
             <div class="container">
                 <div class="happening-grid">
-                    <!-- Upcoming Meeting -->
+                    <!-- Town IDA Meeting -->
+                    <div class="happening-card upcoming">
+                        <span class="card-badge badge-upcoming">Upcoming Meeting</span>
+                        <h3>Town Industrial Development Authority</h3>
+                        <div class="date">February 3, 2026 • 5:15 PM</div>
+                        <p>The Town of Orange IDA will meet to discuss economic development. This is a chance to ask how a data center in the Town might conflict with existing interests and potentially undo grant money received for beautification projects.</p>
+                        <p><strong>Why it matters:</strong> Data centers in Town could undermine investments already made to improve Orange's character and appeal.</p>
+                        <div class="location">
+                            <strong>📍 Location</strong><br>
+                            Town of Orange Community Center Meeting Room<br>
+                            235 Warren Street, Orange
+                        </div>
+                    </div>
+
+                    <!-- County Planning Commission -->
                     <div class="happening-card upcoming">
                         <span class="card-badge badge-upcoming">Upcoming Meeting</span>
                         <h3>Planning Commission</h3>
@@ -1510,22 +1524,18 @@
                         </div>
                     </div>
 
-                    <!-- Recent Victory -->
-                    <div class="happening-card recent">
-                        <span class="card-badge badge-victory">✓ Victory</span>
-                        <h3>Board Recommends SUP Requirement</h3>
-                        <div class="date">January 13, 2026</div>
-                        <p>The Board of Supervisors <strong>unanimously voted</strong> to recommend removing by-right data center approval. This means the Planning Commission will now consider requiring Special Use Permits for all data centers.</p>
-                        <p><strong>What's next:</strong> Planning Commission reviews in February, then returns to BOS for final vote.</p>
-                    </div>
-
-                    <!-- Recent Decision -->
-                    <div class="happening-card">
-                        <span class="card-badge badge-recent">Recent Decision</span>
-                        <h3>Technology District Approved</h3>
-                        <div class="date">December 16, 2025</div>
-                        <p>The Board of Supervisors approved a new Technology (T) District zoning that allows data centers in Orange County. The vote was 5-0.</p>
-                        <p><strong>Impact:</strong> This opened the door to data center development. Community pushback led to the January SUP amendment effort.</p>
+                    <!-- Board of Supervisors Combined Meeting -->
+                    <div class="happening-card upcoming">
+                        <span class="card-badge badge-upcoming">Upcoming Meeting</span>
+                        <h3>Board of Supervisors</h3>
+                        <div class="date">February 10, 2026</div>
+                        <p>Combined meeting including the end of January agenda (canceled due to snow) plus the February agenda. The Board will follow up on the Planning Commission's February 5th recommendations.</p>
+                        <p><strong>Why it matters:</strong> This is where final decisions on by-right tech zoning could be made. Don't miss it!</p>
+                        <div class="location">
+                            <strong>📍 Location</strong><br>
+                            Board of Supervisors Meeting Room<br>
+                            11282 Government Center Drive, Orange
+                        </div>
                     </div>
                 </div>
             </div>
