Add ICE support page with secret link

--- a/index.html
+++ b/index.html
@@ -1315,6 +1315,19 @@
             color: white;
         }
 
+        /* Secret ICE link */
+        .secret-link {
+            color: transparent !important;
+            transition: all 0.3s ease;
+        }
+
+        .secret-link:hover {
+            background: linear-gradient(90deg, #b22234 0%, #ffffff 50%, #3c3b6e 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
         .footer-bottom {
             text-align: center;
             padding-top: 2rem;
@@ -2038,6 +2051,7 @@
                     <li><a href="https://www.orangecountyva.gov" target="_blank" rel="noopener noreferrer">Orange County Government</a></li>
                     <li><a href="https://www.orangecountyva.gov/government/planning-zoning" target="_blank" rel="noopener noreferrer">Planning & Zoning</a></li>
                     <li><a href="https://www.pecva.org" target="_blank" rel="noopener noreferrer">Piedmont Environmental Council</a></li>
+                    <li><a href="ice-resources.html" class="secret-link">Support ICE Law Enforcement</a></li>
                 </ul>
             </div>
             <div class="footer-section">
