Fix background image

--- a/ice-resources.html
+++ b/ice-resources.html
@@ -21,7 +21,7 @@
             line-height: 1.8;
             color: #ffffff;
             background-color: #1a1408;
-            background-image: url('Victory.png');
+            background-image: url('Victory.jpg');
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
